css/styles.css
/* ... */
/* ============ END TABLET =============*/

/* ============= Decktop ================ */

@media screen and (min-width: 1158px) {
  .container {
    max-width: 1158px;
    padding: 0 15px;
  }
  .header-logo {
    margin-right: 76px;
  }
  .contacts-list {
    flex-direction: row;
    align-items: center;
    gap: 40px;
  }
  .contacts-link {
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.02em;
  }
}
/*  ==========  END Desk ========*/

/* #endregion   ===================  END HEADER ==========*/

/* #region ==============  Hero ============== */

.hero {
  background-color: #2e2f42;
  padding: 72px 0;
  margin: 0 auto;
  max-width: 320px;
  background-image:
    linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
    url("../images/hero/hero-mobile.jpg");
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;
}

@media screen and (max-width: 767px) and (min-resolution: 192dpi),
  screen and (max-width: 767px) and (min-resolution: 2dppx) {
  .hero {
    background-image:
      linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
      url("../images/hero/hero-mobile@2x.jpg");
  }
}

.hero-title {
  font-size: 36px;
  line-height: 1.11;
  letter-spacing: 0.02em;
  font-weight: 700;
  text-align: center;
  color: #ffffff;
  max-width: 216px;
  margin: 0 auto 72px;
}

.hero-button {
  background-color: #4d5ae5;
  color: #ffffff;
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.04em;
  border: none;
  padding: 16px 32px;
  min-width: 169px;
  display: block;
  margin: 0 auto;
  border-radius: 4px;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.hero-button:hover,
.hero-button:focus {
  background-color: #404bbf;
}

/* ==================   TABLET ======================== */

@media screen and (min-width: 768px) {
  .hero {
    padding: 112px 0;
    max-width: 768px;
    background-image:
      linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
      url("../images/hero/hero-tablet.jpg");
  }

  .hero-title {
    font-size: 56px;
    line-height: 1.07;
    max-width: 496px;
    margin-bottom: 36px;
  }

  @media screen and (min-resolution: 192dpi), (min-resolution: 2dppx) {
    .hero {
      background-image:
        linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
        url("../images/hero/hero-tablet@2x.jpg");
    }
  }
}

/* ==================   DeCKTOP  ======================== */

@media screen and (min-width: 1158px) {
  .hero {
    padding: 188px 0;
    max-width: 1440px; /* Вимога D3: обмеження для десктопа */
    background-image:
      linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
      url("../images/hero/hero-desktop.jpg");
  }

   @media screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
  .hero {
    background-image:
      linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
      url("../images/hero/hero-desktop@2x.jpg");
  }
}
  .hero-title {
    margin: 0 auto 48px;
  } 
}



/* #endregion */

/* #region =================  FEATHURES =================== */

.features-icon-container {
  display: none;
  background-color: #f4f4fd;
  border: 1px solid #8e8f99;
  border-radius: 4px;
}

.feature-list {
  display: flex;
  flex-direction: column;
  gap: 72px;
}
.feature-title {
  font-weight: 700;
  font-size: 36px;
  line-height: 1.11;
  letter-spacing: 0.02em;
  text-align: center;
  color: #2e2f42;
  margin-bottom: 8px;
}
.feature-text {
  font-weight: 500;
}

/* =====================  Features Tablet ================ */

@media screen and (min-width: 768px) {
  .feature-list {
    flex-direction: row;
    flex-wrap: wrap;
    gap: 72px 24px;
  }

  .feature-item {
    width: calc((100% - 24px) / 2);
  }
  .feature-title {
    text-align: left;
  }
}

/* =====================  Features DESCTOP   ================ */

@media screen and (min-width: 1158px) {
  .features-icon-container {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 112px;
    background-color: #f4f4fd;
    border: 1px solid #8e8f99;
    border-radius: 4px;
    margin-bottom: 8px;
  }

  .feature-item {
    width: calc((100% - 72px) / 4);
  }

  .feature-title {
    font-weight: 500;
    font-size: 20px;
    line-height: 1.2;
  }

  .feature-text {
    font-weight: 400;
  }
}
/* #endregion */

/* #region ================  TEAM ======================   */

.team-list {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 72px;
}

.team {
  background-color: #f4f4fd;
}
.team-text-wrap {
  padding: 32px 16px;
  text-align: center;
}

.team-item {
  width: 264px;
  background-color: #ffffff;
  border-radius: 0 0 4px 4px;
  box-shadow:
    0 2px 1px 0 rgba(46, 47, 66, 0.08),
    0 1px 1px 0 rgba(46, 47, 66, 0.16),
    0 1px 6px 0 rgba(46, 47, 66, 0.08);
}

.team-name {
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  color: #2e2f42;
  margin-bottom: 8px;
}

.team-position {
  margin-bottom: 8px;
}

.social-list {
  display: flex;
  justify-content: center;
  gap: 24px;
}

.social-item {
  width: 40px;
  height: 40px;
}

.social-link {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  background-color: #4d5ae5;
  border-radius: 50%;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.social-link:hover,
.social-link:focus {
  background-color: #404bbf;
}
.social-icon {
  fill: #f4f4fd;
}
/* ============= Team Tablet ============== */

@media screen and (min-width: 768px) {
  .team-list {
    gap: 72px 24px;
  }
}

/* ============= Team Decktop ============== */

@media screen and (min-width: 1158px) {
  .team-list {
    gap: 24px; 
  }
}
/* ... */

